--- a/src/app/_directives/alert.component.html
+++ b/src/app/_directives/alert.component.html
@@ -1,1 +1,6 @@
-﻿<div *ngIf="message" [ngClass]="{ 'alert': message, 'alert-success': message.type === 'success', 'alert-danger': message.type === 'error' }">{{message.text}}</div>
+﻿<div *ngIf="message" [ngClass]="{ 'alert': message, 'alert-success': message.type === 'success', 'alert-danger': message.type === 'error' }" [ngClass]="close">
+    {{message.text}}
+    <div class="close" (click)="onCloseClick()">
+        x
+    </div>
+</div>
