--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,6 +11,7 @@
         </div>
     </nav>
     <div class="middle-content">
+        <alert></alert>
         <router-outlet></router-outlet>
     </div>
 </div>
