--- a/src/app/_directives/alert.component.scss
+++ b/src/app/_directives/alert.component.scss
@@ -1,3 +1,11 @@
-element.close {
+.close {
     display: none;
 }
+
+alert alert-danger {
+left: 0;
+bottom: 0;
+position: absolute;
+align-self: auto;
+}
+
