--- a/src/app/_directives/alert.component.html
+++ b/src/app/_directives/alert.component.html
@@ -1,6 +1,3 @@
-﻿<div *ngIf="message" [ngClass]="{ 'alert': message, 'alert-success': message.type === 'success', 'alert-danger': message.type === 'error' }" [ngClass]="close">
+﻿<div [ngClass]="{'alert': message, 'alert-success': message.type === 'success', 'alert-danger': message.type === 'error' }">
     {{message.text}}
-    <div class="close" (click)="onCloseClick()">
-        x
-    </div>
 </div>
